--- a/app/Locale/pol/LC_MESSAGES/default.po
+++ b/app/Locale/pol/LC_MESSAGES/default.po
@@ -2,7 +2,7 @@ msgid "navigation.home"
 msgstr "home"
 
 msgid "navigation.services"
-msgstr "uslugi"
+msgstr "oferta"
 
 msgid "navigation.projects"
 msgstr "projekty"
